# udrawd

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  PrefixHeader.pch  README.md  style.css  udrawd.cpp  udrawdConfig.h.in
CMake/Modules/: FindHiredis.cmake  FindlibUv.cmake  Findnghttp2.cmake  FinduWebSockets.cmake
nbproject/: configurations.xml  project.xml
src/: PrefixHeader.pch  canvasapi.cpp  canvasapi.h  udrawd.cpp  websocket.cpp  websocket.h
src/MathFunctions/: mysqrt.cpp
udrawd.xcodeproj/: project.pbxproj
udrawd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
